--- a/client/src/Styles/old_styles/authentication.css
+++ b/client/src/Styles/old_styles/authentication.css
@@ -4,14 +4,14 @@
     margin: 0;
     box-sizing: border-box;
 }
-body{
+/* body{
     background-color: #000000;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100vh;
     margin: 0;
-}
+} */
 .background{
     width: 430px;
     height: 520px;
