--- a/client/src/Styles/movies.css
+++ b/client/src/Styles/movies.css
@@ -3,24 +3,30 @@
 
 /* ANT DESIGN COMPONENTS STYLING */
 
+.stack-container {
+    overflow-x: hidden;
+}
+
 #nav-text-link {
-    background-color: cadetblue;
     margin: 2px 10px;
+    color: #ffffff;
+    font-weight: 400;
 }
 
 #nav-bar {
-    background-color: antiquewhite;
+    background-color: #343434;
     padding: 20px 0px;
 }
 
 .movie-datepicker-container {
     display: flex;
     justify-content: end;
-    background-color: aquamarine;
+    background-color: #424242;
 }
 
-#movie-datepicker {
+#movie-datepicker .ant-picker-input {
     width: 300px;
+    color: #6bbfff;
 }
 
 .ant-picker {
@@ -28,22 +34,46 @@
     margin: 20px 0px;
     margin-right: 30px;
     padding: 5px 10px;
+    background-color: #6bbfff22;
+    border: 2px solid #6bbfff;
 }
 
-.ant-picker-input input {
+.ant-picker-input > input {
     text-align: center;
+    color: #6bbfff !important;
+}
+
+.ant-picker-input > input::placeholder {
+    color: #6bbfff !important;
+}
+
+.ant-picker-suffix .anticon {
+  color: #6bbfff;
+}
+
+.movies-section {
+    min-height: 100vh;
+    background-color: #424242;
 }
 
 #movie-card {
     display: flex;
     width: 725px;
-    background-color: bisque;
+    background-color: #575757;
     margin: 10px;
     border-radius: 0;
     padding: 0 10px 0 0;
+    box-shadow: 
+    rgba(0, 0, 0, 0.07) 0px 1px 2px, 
+    rgba(0, 0, 0, 0.07) 0px 2px 4px, 
+    rgba(0, 0, 0, 0.07) 0px 4px 8px, 
+    rgba(0, 0, 0, 0.07) 0px 8px 16px, 
+    rgba(0, 0, 0, 0.07) 0px 16px 32px, 
+    rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
-.ant-card-cover {
+.ant-card {
+    border: none;
 }
 
 #movie-image {
@@ -52,7 +82,14 @@
     margin-top: 1px;
 }
 
+.ant-card .ant-card-meta-title {
+    color: #6bbfff;
+    font-size: 24px;
+}
 
+.ant-card .ant-card-meta-description {
+    color: #cacaca;
+}
 
 /* END OF ANT DESIGN COMPONENTS STYLING */
 
