--- a/client/src/Styles/reserve.css
+++ b/client/src/Styles/reserve.css
@@ -1,7 +1,12 @@
+.seats-layout-container {
+    overflow-x: hidden;
+}
+
 .movie-details {
     position: relative;
+    /* background-color: brown; */
     /* width: 45%; */
-    height: 88vh;
+    height: 89.25vh;
 }
 
 .movie-details-poster {
@@ -19,12 +24,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, rgba(0, 0, 0, 0), rgb(115, 188, 199));
+    background: linear-gradient(to right, rgba(0, 0, 0, 0), #424242);
     pointer-events: none; /* Allow clicks to pass through the overlay to the image */
 }
 
 .movie-details-text-container {
-    background-color: cornsilk;
     position: absolute;
     top: 80%;
     left: 50%;
@@ -36,12 +40,12 @@
 }
 
 .seat-details {
-    background-color: #73bcc7;
+    background-color: #424242;
 }
 
 .ticket-details {
-    background-color: cornflowerblue;
-    padding-top: 70px;
+    background-color: #424242;
+    padding-top: 30px;
 }
   
 .seat-grid {
@@ -60,19 +64,21 @@
     margin: 10px;
     border-radius: 10px;
     cursor: pointer;
-    border: 1px solid #ccc;
+    border: 2px solid #6bbfff;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-weight: 600;
 }
   
 .reserved {
-    background-color: rgb(109, 109, 109);
-    color: white;
+    background-color: rgba(0, 0, 0, 0);
+    color: rgba(255, 255, 255, 0.323);
+    border: 2px solid rgba(255, 255, 255, 0.323);
 }
   
 .available {
-    background-color: rgb(229, 229, 229);
+    background-color: #6bbfffad;
     color: white;
 }
 
@@ -83,21 +89,77 @@
 
 .ticket-details-title {
     text-align: center;
-    margin-bottom: 30px;
     font-weight: 600;
     font-size: 30px;
+    color: #6bbfff;
 }
   
 .reserved-seats-list {
-    background-color: #73bcc7;
+    background-color: #575757;
     width: 400px;
+    padding: 40px;
+    border-radius: 8px;
+    /* border: 5px solid #035c9c; */
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+
 }
 
 .reserved-seats-list h4 {
+    clear: both;
     font-size: 20px;
+    margin-bottom: 10px;
+    font-weight: 600;
+    color: #6bbfff;
 }
 
 .reserved-seats-text {
     float: left;
     margin: 4px 4px;
+    font-weight: 600;
+    color: #ffffff;
 }
+
+.reserved-seats-text-default {
+    margin-bottom: -32px;
+    font-weight: 300;
+    color: #ffffff;
+}
+
+.num-senior-label {
+    margin-top: 150px;
+}
+
+.ticket-details-senior-num-tip {
+    font-weight: 300;
+    color: #ffffff;
+}
+
+.ant-input-number {
+    width: 70px;
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.ant-form-item-control-input-content {
+    display: flex;
+}
+
+.ticket-total-cost {
+    font-size: 40px;
+    font-weight: 600;
+    color: #ffffff;
+}
+
+.ticket-book-button {
+    padding: 10px 35px;
+    text-align: center;
+    margin-left: 230px;
+    margin-top: 10px;
+    border-radius: 10px;
+    background-color: #6bbfffad;
+    outline: none;
+    border: 2px solid #6bbfff;
+    color: #ffffff; 
+    font-weight: 600;
+}
+
