--- a/client/src/Styles/movies.css
+++ b/client/src/Styles/movies.css
@@ -132,10 +132,17 @@
 .ant-card .ant-card-meta-title {
     color: #6bbfff;
     font-size: 24px;
+    overflow: visible;
+    overflow-wrap: break-word;
 }
 
 .ant-card .ant-card-meta-description {
     color: #cacaca;
+}
+
+.ant-card-meta-detail {
+    max-width: 450px;
+    overflow-wrap: break-word !important;
 }
 
 /* END OF ANT DESIGN COMPONENTS STYLING */
