--- a/client/src/Styles/signup.css
+++ b/client/src/Styles/signup.css
@@ -1,8 +1,87 @@
-.forms h3{
-    font-size: 32px;
-    font-weight: 500;
-    line-height: 42px;
+body {
+    background-color: #424242;
+}
+
+.movies-authentication-background {
+    position: absolute;
+    height: 135vh;
+    width: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.movies-authentication-background-overlay {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.429);
+    pointer-events: none; /* Allow clicks to pass through the overlay to the image */
+}
+
+.authentication-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ant-form {
+    background-color: #575757;
+    width: 400px;
+    margin-top: 140px;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
+}
+
+.ant-form h3 {
+    color: #6bbfff;
     text-align: center;
-    margin-top: 20px;
-    margin-bottom:10px;
+    transform-style: preserve-3d;
+    z-index: 1;
+}
+
+.ant-form-item-control-input-content {
+    color: #6bbfff;
+}
+
+.ant-input-affix-wrapper {
+    background-color: #6bbfff22;
+    border: 2px solid #6bbfff;
+    padding: 5px 20px;
+}
+
+.ant-input-affix-wrapper > .ant-input-prefix {
+    color: #6bbfff;
+}
+
+.ant-input-affix-wrapper > input {
+    margin-top: 0px;
+    margin-left: 10px;
+    background: none;
+    color: #6bbfff;
+}
+
+.remember-me-text > span {
+    color: #6bbfff;
+}
+
+.ant-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 35px;
+    text-align: center;
+    margin-top: 10px;
+    border-radius: 10px;
+    background-color: #6bbfffad;
+    outline: none;
+    border: 2px solid #6bbfff;
+}
+
+.ant-btn > span {
+    font-weight: 600;
+    color: #ffffff; 
 }
