--- a/client/src/Styles/reserve.css
+++ b/client/src/Styles/reserve.css
@@ -97,7 +97,7 @@
 .reserved-seats-list {
     background-color: #575757;
     width: 400px;
-    padding: 40px;
+    padding: 30px 40px;
     border-radius: 8px;
     /* border: 5px solid #035c9c; */
     box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 50px;
@@ -125,7 +125,7 @@
 }
 
 .num-senior-label {
-    margin-top: 150px;
+    margin-top: 200px;
 }
 
 .ticket-details-senior-num-tip {
