--- a/client/src/Styles/signup.css
+++ b/client/src/Styles/signup.css
@@ -1,13 +1,15 @@
 body {
     background-color: #424242;
+    transform-style: preserve-3d;
+    overflow-y: hidden;
 }
 
 .movies-authentication-background {
     position: absolute;
-    height: 135vh;
+    height: 133vh;
     width: 100%;
     object-fit: cover;
-    z-index: -1;
+    z-index: -2;
 }
 
 .movies-authentication-background-overlay {
@@ -16,9 +18,10 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: rgba(0, 0, 0, 0.429);
     pointer-events: none; /* Allow clicks to pass through the overlay to the image */
+    z-index: -1;
 }
 
 .authentication-container {
@@ -28,7 +31,7 @@ body {
 }
 
 .ant-form {
-    background-color: #575757;
+    background-color: #3e3e3e;
     width: 400px;
     margin-top: 140px;
     padding: 40px;
@@ -39,8 +42,13 @@ body {
 .ant-form h3 {
     color: #6bbfff;
     text-align: center;
-    transform-style: preserve-3d;
     z-index: 1;
+}
+
+.error-message {
+    color: #ff4d4f;
+    margin-bottom: 10px;
+    text-align: center;
 }
 
 .ant-form-item-control-input-content {
