--- a/client/src/Styles/movies.css
+++ b/client/src/Styles/movies.css
@@ -21,7 +21,8 @@
     transform: translateZ(-20px) scale(4);
 }
 
-.parallax-background, .parallax-foreground {
+.parallax-background,
+.parallax-foreground {
     position: absolute;
     height: 100%;
     width: 100%;
@@ -34,8 +35,12 @@
     margin-top: -400px;
     font-size: 5em;
     color: #6bbfff;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, .2);
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
     transform: translateZ(-15px) scale(2);
+}
+
+.no-data-message {
+    color: #6bbfff82;
 }
 
 /* ANT DESIGN COMPONENTS STYLING */
@@ -69,7 +74,7 @@
 .ant-picker {
     width: 300px;
     margin: 20px 0px;
-    margin-right: 30px;
+    margin-right: 110px;
     padding: 5px 10px;
     background-color: #6bbfff22;
     border: 2px solid #6bbfff;
@@ -110,13 +115,9 @@
     margin: 10px;
     border-radius: 0;
     padding: 0 10px 0 0;
-    box-shadow: 
-    rgba(0, 0, 0, 0.07) 0px 1px 2px, 
-    rgba(0, 0, 0, 0.07) 0px 2px 4px, 
-    rgba(0, 0, 0, 0.07) 0px 4px 8px, 
-    rgba(0, 0, 0, 0.07) 0px 8px 16px, 
-    rgba(0, 0, 0, 0.07) 0px 16px 32px, 
-    rgba(0, 0, 0, 0.07) 0px 32px 64px;
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px,
+        rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px,
+        rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
 .ant-card {
@@ -143,6 +144,11 @@
 .ant-card-meta-detail {
     max-width: 450px;
     overflow-wrap: break-word !important;
+}
+
+.ant-dropdown-trigger > span {
+    font-size: 40px !important;
+    color: #6bbfff;
 }
 
 /* END OF ANT DESIGN COMPONENTS STYLING */
